tests/negative/neg_pr1116_nominal_derived_implicit.safe
package neg_pr1116_nominal_derived_implicit

   type user_id is new integer (0 to 1000);
   type derived_user_id is new user_id (0 to 1000);

   value : user_id = 42;
   derived : derived_user_id = value;
